# concert-analytics

./: .env.example  .gitignore  README.md  requirements.txt  sandbox.sql  tasks.py
concert_analytics_dbt/: dbt_project.yml
concert_analytics_dbt/config/: profiles.yml
concert_analytics_dbt/models/mart/: mart_all_albums.sql  mart_all_tracks.sql  mart_all_tracks_popularity_scores.sql  mart_all_tracks_versions.sql  mart_event_summary.sql  mart_setlist_history.sql  mart_track_setlist_similarity_scores.sql  schema.yml
concert_analytics_dbt/models/project/: project_002_coachella_master_setlist_data.sql  schema.yml
concert_analytics_dbt/models/staging/: schema.yml  (+5 more)
loadin/: README.md  pyproject.toml
loadin/loadin/: __init__.py  paths.py
loadin/loadin/postgres/: __init__.py  loader.py  schema_structure.sql
loadin/loadin/setlistfm/: client.py  utils.py
loadin/loadin/spotify/: utils.py
postgres/: __init__.py  connection.py  fetcher.py  loader.py  schema_structure.sql  utils.py
projects/0001-The-Anatomy-of-a-mewithoutYou-Setlist/: load_data.py  mewithoutYou_Untitled_Tour_Data.csv  mewithoutYou_Untitled_times_played_vs_popularity.csv  mewithoutyou_standard_setlist.ipynb
projects/0002-Coachella-vs-Regular-Tour/: coachella_vs_normal_tour_analysis.ipynb  data_exploration.session.sql  load_data.py
projects/mewithoutyou_live_vol_1_analysis/: eda_mewithoutyou.ipynb  load_data.py  mewithoutYou_Untitled_Tour_Data.csv  mewithoutyou_standard_setlist.ipynb  test.py
setkit/: pyproject.toml
setlistfm/: __init__.py  utils.py
spotify/: __init__.py  client.py  utils.py
(+3 files in other folders)
